fix the spacing under the 'tel' type

--- a/web-client/src/styles/forms.scss
+++ b/web-client/src/styles/forms.scss
@@ -26,6 +26,7 @@ input[type='file'] {
 input[type='file'],
 input[type='number'],
 input[type='text'],
+input[type='tel'],
 textarea,
 select {
   padding-top: 0;
